k3d/usabana-market-service.yaml
# Solo Aplicación (Spring Boot)
# Requiere que ya exista la BD (Service 'postgres' y Secret 'postgres-secret' en el ns usabana-market).
---
apiVersion: v1
kind: Service
metadata:
  name: market-service
  namespace: usabana-market
  labels:
    app: market-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8090
      targetPort: 8090
  selector:
    app: market-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-app
  namespace: usabana-market
  labels:
    app: market-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-app
  template:
    metadata:
      labels:
        app: market-app
    spec:
      containers:
        - name: app
          image: docker.io/handeycor/usabana-market:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
              name: http
          readinessProbe:
            tcpSocket:
              port: 8090
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8090
            initialDelaySeconds: 45
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
