k3d/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-ingress
  namespace: usabana-market
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: market.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: market-service
                port:
                  number: 8090

    # Acceso por IP del host (catch-all): permite http://<IP-HOST>/market/api
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: market-service
                port:
                  number: 8090
